# ai-metrics

./: .gitignore  README.md  pyproject.toml
prompts/: mcp.txt
src/aim/: cli_args.py  cli_entrypoint.py  data_sources.py  metrics.py  state.py
src/aim/claim_checking/: mcp_checker.py  vector_checker.py  web_checker.py
src/aim/cli/: parser.py
src/aim/models/: model.py  providers.py
src/aim/models/embeddings/: embed_models.py  embeddings_service.py
src/aim/models/llm/: llm_models.py  llm_service.py
src/aim/tools/: claim_check_tool.py  claim_extraction_tool.py  claim_models.py  return_record_tool_input.py
