[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aim"
version = "0.1.0"
description = "AI test runner"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scikit-learn",
    "langchain-core",
    "langchain-openai", 
    "langchain-anthropic",
    "pydantic>=2.0.0",
    "python-dotenv",
    "json-repair",
    "httpx",
    "mcp[cli]",
    "langchain-mcp-adapters",
    "langgraph",
    "langchain-voyageai",
    "pypdf",
    "beautifulsoup4",
    "requests"
]

[project.scripts]
aim = "aim.cli_entrypoint:main"
